22-05-30 교재선택&사진선택

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cookandroid.mathcore">
-
+    //카메라 권한 부여
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" android:required="true"/>
     //인터넷 권한 부여
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -23,6 +27,8 @@
         </activity>
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".selectanssheetActivity"/>
+        <activity android:name=".imageuploadActivity"/>
     </application>
 
 </manifest>
