--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,13 @@
     //인터넷 권한 부여
     <uses-permission android:name="android.permission.INTERNET"/>
 
-    //트래픽 권한 부여 usesCleartextTraffic="true"
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Mathcore"
-
-        android:usesCleartextTraffic="true">
-
+        android:theme="@style/Theme.Mathcore">
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -33,9 +29,6 @@
         <activity android:name=".RegisterActivity"></activity>
         <activity android:name=".selectanssheetActivity"/>
         <activity android:name=".imageuploadActivity"/>
-        <activity android:name=".MainMenuActivity"/>
-        <activity android:name=".LoginActivity_D"></activity>
-        <activity android:name=".RegisterActivity_D"></activity>
     </application>
 
 </manifest>
