--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,11 +31,12 @@
         </activity>
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".RegisterActivity"></activity>
-        <activity android:name=".selectanssheetActivity"/>
-        <activity android:name=".imageuploadActivity"/>
-        <activity android:name=".MainMenuActivity"/>
+        <activity android:name=".selectanssheetActivity"></activity>
+        <activity android:name=".imageuploadActivity"></activity>
+        <activity android:name=".MainMenuActivity"></activity>
         <activity android:name=".LoginActivity_D"></activity>
         <activity android:name=".RegisterActivity_D"></activity>
+        <activity android:name=".selectStudentActivity"></activity>
     </application>
 
 </manifest>
